# TCRpMHCdataset

./: .gitignore  LICENSE  MANIFEST.in  README.md  deploy.sh  lint.sh  objects.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: index.html  tcrpmhcdataset.html
docs/tcrpmhcdataset/: TCR.html  dataset.html  pMHC.html
refs/: 2field_hla_consensus_seqs.csv
tcrpmhcdataset/: TCR.py  __init__.py  constants.py  dataset.py  pMHC.py
tcrpmhcdataset/refs/: hla_pseudo_seqs.csv
tests/: test_dataset.py  test_pMHC.py  test_tcr.py
tests/test_data/: sampled_paired_data_cleaned.csv
